Arquivos do jogo trilha

--- a/trilha/src/main/resources/application.properties
+++ b/trilha/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:file:~/trilha;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.h2.console.enabled=true
+
+
 
