--- a/trilha/pom.xml
+++ b/trilha/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>trilha</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>trilha</name>
-	<description>Projeto do jogo Trilha, como forma de avaliação para a disciplina de Engenharia de Software 3</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -31,10 +31,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
